Fixing syntax error

--- a/alipi/templates/feeds.html
+++ b/alipi/templates/feeds.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src={{ url_for('static',filename="config.js" }}></script>
+  <script type="text/javascript" src={{ url_for('static',filename="config.js") }}></script>
   <script type="text/javascript">
     $.getJSON(config.deploy+"/feed", function(data)
     {
